# PDEs

./: .gitignore  CMakeLists.txt  README.md  configure.sh  parameter_study.py  plot.py  read.py  visualize.py
Macros/: downstream.cmake
Modules/: CMakeLists.txt
Modules/Diffusion/: boundaries.h  diffusion.h
Modules/Diffusion/SteadyStateSolver/: assembly.cc  check_inputs.cc  execute.cc  initialize.cc  initialize_boundaries.cc  initialize_materials.cc  steadystate_solver.h
Modules/InfiniteMedium/KEigenvalueSolver/: execute.cc  keigenvalue_solver.h
Modules/InfiniteMedium/SteadyStateSolver/: execute.cc  file_io.cc  initialize.cc  steadystate_solver.h
Modules/InfiniteMedium/TransientSolver/: execute.cc  initialize.cc  transient_solver.h
Modules/NeutronDiffusion/: CMakeLists.txt  boundaries.cc  boundaries.h  groupset.h
Modules/NeutronDiffusion/Groupset/: groupset.h
Modules/NeutronDiffusion/KEigenvalueSolver/: compute_production.cc  execute.cc  file_io.cc  keigenvalue_solver.h  power_method.cc
Modules/NeutronDiffusion/SteadyStateSolver/: assemble_fv.cc  assemble_matrix.cc  assembler.cc  compute_precursors.cc  execute.cc  file_io.cc  initialize.cc  initialize_boundary.cc  initialize_materials.cc  set_source.cc  steadystate_solver.h  vector_ops.cc  write_flux.cc
Modules/NeutronDiffusion/SteadyStateSolver/Base/: execute.cc  initialize.cc  initialize_boundary.cc  initialize_materials.cc  steadystate_solver.h  vector_ops.cc
Modules/NeutronDiffusion/SteadyStateSolver/FV/: assemble_fv.cc  assemble_matrix.cc  compute_precursors.cc  initialize_discretization.cc  set_source.cc  steadystate_solver_fv.h  vector_ops.cc
Modules/NeutronDiffusion/TransientSolver/: assemble_transient_matrix.cc  compute_auxiliary.cc  execute.cc  file_io.cc  initialize.cc  set_transient_source.cc  solve_timestep.cc  transient_solver.h  update_precursors.cc
Modules/NeutronTransport/InfiniteMedium/: execute.cc  infinite_medium.cc  infinite_medium.h  initialize.cc
Modules/NeutronTransport/InfiniteMedium/KEigenvalueSolver/: execute.cc  keigenvalue_solver.h
Modules/NeutronTransport/InfiniteMedium/SteadyStateSolver/: execute.cc  initialize.cc  steadystate_solver.h
PDEs/: exceptions.h  macros.h  main.cc
PDEs/Discretization/FiniteVolume/: finite_volume.h
PDEs/Grid/: cartesian_vector.cc  cartesian_vector.h  cell.cc  cell.h  create_1d_mesh.cc  create_1d_orthomesh.cc  create_2d_orthomesh.cc  face.cc  face.h  grid_structs.h  grid_utilities.cc  mesh.cc  mesh.h  ortho_grids.h  point.cc  point.h
PDEs/Grid/Cell/: cell.cc  cell.h
PDEs/Grid/Face/: face.cc  face.h
PDEs/Grid/Mesh/: connectivity.cc  geometric_info.cc  mesh.cc  mesh.h
PDEs/LinearSolvers/: cholesky.h  linear_solver.h  lu.h
PDEs/Material/: material.h  material_property.h  material_utils.cc
PDEs/Material/CrossSections/: cross_sections.h  operations.cc  read_utilities.cc  read_xs_file.cc  reset.cc  utilities.cc
PDEs/Math/: gaussian_elimination.h  math.cc  math.h  math_factorization.cc  math_solve_ops.cc  matrix.cc  matrix.h  sparse_matrix.cc  sparse_matrix.h  utilities.h  vector.cc  vector.h
PDEs/Math/Discretization/: discretization.cc  discretization.h  finite_volume.h
PDEs/Math/Discretization/FiniteVolume/: finite_volume.h  fv.cc  fv.h  (+1 more)
PDEs/Math/LinearSolvers/: DirectSolvers  IterativeSolvers  cholesky.h  direct_solvers.h  gauss_elimination.cc  gauss_elimination.h  gaussian_elimination.cc  gaussian_elimination.h  iterative_solvers.h  linear_solver.cc  linear_solver.h  lu.cc  lu.h  lu_solver.cc  lu_solver.h
PDEs/Math/PETScUtils/: petsc_copy.cc  petsc_create_matrix.cc  petsc_create_vec.cc  petsc_utils.h
PDEs/Math/Polynomials/: chebyshev.cc  chebyshev.h  legendre.cc  legendre.h  polynomial.cc  polynomial.h
PDEs/Math/Quadratures/: gauss_chebyshev.cc  gauss_chebyshev.h  gauss_legendre.cc  gauss_legendre.h  quadrature.cc  quadrature.h
PDEs/Math/Sparse/: sparse_iterators.cc  sparse_matrix.cc  sparse_matrix.h
PDEs/Math/SpatialDiscretization/: spatial_discretization.h
PDEs/Physics/: lightweight_xs.cc  lightweight_xs.h  material.cc  material.h
PDEs/Physics/CrossSections/: cross_sections.cc  cross_sections.h  operations.cc  read_ndi_file.cc  read_xs_file.cc  utilities.cc  write.cc
PDEs/SpatialDiscretization/: spatial_discretization.cc  spatial_discretization.h
PDEs/SpatialDiscretization/FiniteVolume/: finite_volume.h
PDEs/Timer/: timer.cc  timer.h
Problems/Basic2D/: Basic2D.cc
Problems/DVM/: CMakeLists.txt  run.cc
Problems/InfiniteMedium/: CMakeLists.txt  InfiniteMedium.cc  generate_ics.py  reader.py  run.cc
Problems/InfiniteMedium/outputs/: e_bounds.txt
Problems/InfiniteSlab/: CMakeLists.txt  run.cc
Problems/LRA/: CMakeLists.txt  LRA.cc  LRA_KEigenvalue.cc  run.cc
Problems/LRA/xs/: fuel1_w_rod.xs  fuel1_wo_rod.xs  fuel2_w_rod.xs  fuel2_wo_rod.xs  reflector.xs
Problems/Sphere3g/: CMakeLists.txt  Sphere3g.cc  Sphere3g_KEigenvalue.cc  Sphere3g_Transient.cc  run.cc
Problems/Sphere3g/xs/: base3g.xs
Problems/TWIGL/: CMakeLists.txt  TWIGL.cc  TWIGL_KEigenvalue.cc  run.cc
Problems/TWIGL/xs/: fuel0.xs  fuel1.xs
Test/: mesh_writing.cc  ndi_test.cc  polynomials.cc
Test/Basic2D/: Basic2D.cc
Test/Basic2D/xs/: test_1g.xs
Test/LRA/: LRA.cc
Test/LRA/xs/: fuel1_w_rod.xs  fuel1_wo_rod.xs  fuel2_w_rod.xs  fuel2_wo_rod.xs
Test/Sphere3g/: Sphere3g_KEigenvalue.cc  Sphere3g_Transient.cc
Test/TWIGL/: TWIGL.cc  k_eff.txt
Test/TWIGL/xs/: fuel1.xs  mat0.xs  mat1.xs
doc/: DoxyConfig
python_utils/: __init__.py  infinite_medium_reader.py  parameter_study.py  point.py  reader.py  visualize.py
python_utils/neutronics_reader/: __init__.py
python_utils/neutronics_readers/: __init__.py  keigenvalue_reader.py  steadystate_reader.py  transient_reader.py
python_utils/readers/: __init__.py  cartesian_vector.py
python_utils/readers/neutronics_readers/: steadystate_reader.py  transient_reader.py
readers/neutronics/: dataset_reader.py
readers/neutronics/simulation_reader/: __init__.py  _plot.py
xs/: graphite_pure.xs  test_1g.xs  test_3g.xs
xs_data/: 1001.ndi  simple_fissile.xs  test.xs  test_2g.xs
(+31 files in other folders)
